<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgportreit" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="fitStart"
            android:src="@drawable/ornup" />

        <TextView
            android:id="@+id/q1"
            style="@style/smallerTextStyle"
            android:layout_marginTop="@dimen/below_ornament"
            android:gravity="center"
            android:text="@string/q1"

            />

        <RadioGroup
            android:id="@+id/group_q1"
            style="@style/radiogroupStyle"
            android:layout_below="@id/q1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/optionA_q1"
                style="@style/radiobuttonStyle"
                android:onClick="check_q1"
                android:text="@string/ans1_q1" />

            <RadioButton
                android:id="@+id/optionB_q1"
                style="@style/radiobuttonStyle"
                android:onClick="check_q1"
                android:text="@string/ans2_q1" />

            <RadioButton
                android:id="@+id/optionC_q1"
                style="@style/radiobuttonStyle"
                android:onClick="check_q1"
                android:text="@string/ans3_q1" />

            <RadioButton
                android:id="@+id/optionD_q1"
                style="@style/radiobuttonStyle"
                android:onClick="check_q1"
                android:text="@string/ans4_q1" />

            <RadioButton
                android:id="@+id/optionE_q1"
                style="@style/radiobuttonStyle"
                android:onClick="check_q1"
                android:text="@string/ans5_q1" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/customer_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_q1"
            android:layout_marginTop="@dimen/margin5"
            android:textColorHint="@color/hintColor"
            >

            <EditText
                android:id="@+id/customer_comment_howOften"
                style="@style/entryButtonStyle"
                android:hint="..."
                android:imeOptions="flagNoExtractUi"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/next_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/arrowr"
            android:onClick="surveyThird"
            android:text="@string/next" />

        <Button
            android:id="@+id/previous_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/arrowl"
            android:onClick="backToFirst"
            android:text="@string/previous" />

        <ImageView
            android:id="@+id/orn_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/orndown" />
    </RelativeLayout>
</ScrollView>