<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgportreit"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="fitStart"
            android:src="@drawable/ornup"
            />

        <TextView
            android:id="@+id/text1"
            style="@style/smallerTextStyle"
            android:layout_marginTop="@dimen/below_ornament"
            android:gravity="center"
            android:text="@string/text1"
            />

        <EditText
            android:id="@+id/customer_name"
            style="@style/entryButtonStyle"
            android:layout_below="@id/text1"
            android:hint="@string/name_insert"
            android:imeOptions="flagNoExtractUi"
            />

        <CheckBox
            android:id="@+id/checkbox_first_time"
            style="@style/smallerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_name"
            android:layout_marginTop="@dimen/margin20"
            android:paddingLeft="@dimen/inner_margin"
            android:text="@string/first_time_customer" />

        <Button
            android:id="@+id/next_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/arrowr"
            android:text="@string/next"
            android:onClick="SurveySecond"
             />

        <Button
            android:id="@+id/previous_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/arrowl"
            android:text="@string/previous"
            android:onClick="backToWelcome"
            />

        <ImageView
            android:id="@+id/orn_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/orndown"
            />
    </RelativeLayout>
</ScrollView>