<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bgportreit" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="fitStart"
            android:src="@drawable/ornup" />

        <TextView
            android:id="@+id/text6"
            style="@style/smallerTextStyle"
            android:layout_marginTop="@dimen/center_dimension"
            android:gravity="center"
            android:text="@string/q6_text" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text6"
            android:layout_centerInParent="true"
            android:background="@drawable/envelope"
            android:fontFamily="casual"
            android:gravity="center"
            android:onClick="mail_submission"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/textBrownColor"
            android:textSize="@dimen/minTextSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentRight="true"
            android:drawableTop="@drawable/arrowr"
            android:onClick="surveyFinal"
            android:text="@string/next" />

        <Button
            android:id="@+id/previous_button"
            style="@style/LowerButtonsStyle"
            android:layout_above="@+id/orn_down"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/arrowl"
            android:onClick="backToFifth"
            android:text="@string/previous" />

        <ImageView
            android:id="@+id/orn_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/orndown" />
    </RelativeLayout>
</ScrollView>